# LivingTool

./: .gitignore  LivingTool.sln  README.md
.github/workflows/: build.yml  release.yml
docs/: ISO_UNPACKING_FOR_DUMMIES.md  ISO_UNPACKING_HIGH_LEVEL.md  NPC_BIN_UNPACKING.md
src/LivingTool.Console/: LivingTool.Console.csproj  MyRoots.xml  Program.cs
src/LivingTool.Console/Commands/: NpcDecodeCommand.cs  NpcJsonSerializerContext.cs  ReadCommand.cs  RunCommand.cs
src/LivingTool.Console/Features/Structure/: StructureReader.cs
src/LivingTool.Console/Features/Unpacker/: GameUnpacker.cs  IUnpacker.cs
src/LivingTool.Core/: GlobalUsings.cs
src/LivingTool.Core/Features/BinaryHandler/: BinaryFileService.cs  FileHeader.cs  IBinaryFileService.cs
src/LivingTool.Core/Features/Extraction/: FileExtractionService.cs  FolderConstants.cs  GuardiansCrusadeFileService.cs  IFileExtractionService.cs  IGuardiansCrusadeFileService.cs  LocSectorConstants.cs  SectorConstants.cs
src/LivingTool.Core/Features/GameStructure/Enemy/: EnemyData.cs  EnemyUnpacker.cs  MoveEntry.cs
src/LivingTool.Core/Features/GameStructure/Npc/: NpcFileData.cs
src/LivingTool.Desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/LivingTool.Desktop/src/: App.tsx  main.tsx  styles.css
src/LivingTool.Desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/LivingTool.Desktop/src-tauri/src/: lib.rs  main.rs
tests/LivingTool.Core.Tests/: LivingTool.Core.Tests.csproj  UnitTest1.cs
tests/LivingTool.Core.Tests/TestHelpers/: DataExtensions.cs
(+1 files in other folders)
